changes to text

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					     </div>
 					 <!--search button-->
 					   	</div>
-					   	<h3 id="give">or give us a location</h3>
+					   	<h3 id="give">or give us your location</h3>
 					   	<!--access button-->
 					    <button type="button" class="btn btn-labeled">
 		                <img src="img/navigation.png" class="btn-label" alt="umbrellapp navigation"><span>access location</span></button>
